--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aniversário da Madu</title>
     <link rel="stylesheet" href="styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Olá</h1>
-    <img src="./images/backend.png" alt="">
+    <header class="hero">
+        <div class="container">
+            <img class="hero__logo" src="./images/logo_1.png" alt="">
+            <p class="hero__text">
+                A Maria Eduarda faz 3 anos em 75d 12h 20m 15s
+            </p>
+        </div>
+    </header>
     <script src="scripts/main.js"></script>
 </body>
 </html>
