criação da seção de informações

--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,27 @@
 <body>
     <header class="hero">
         <div class="container">
-            <img class="hero__logo" src="./images/logo_1.png" alt="">
+            <img class="hero__logo" src="./images/logo_madu.png" alt="logo da madu 3">
             <p class="hero__text">
                 A Maria Eduarda faz 3 anos em 75d 12h 20m 15s
             </p>
+            <div class="infos-bar">
+                <ul class="infos-bar__infos">
+                    <li class="infos-bar__infos__item">
+                        <b>Localização</b>
+                        Av. Salgadao Filho - Guarulhos - São Paulo
+                    </li>
+                    <li class="infos-bar__infos__item">
+                        <b>Recomendação de Presente</b>
+                        Vestido de princesa / Jogos interativos
+                    </li>
+                    <li class="infos-bar__infos__item">
+                        <b>Quando</b>
+                        24/02/2025 às 12hrs
+                    </li>
+                </ul>
+                <a href="#" class="button button--primary">Confirme Presença</a>
+            </div>
         </div>
     </header>
     <script src="scripts/main.js"></script>
