--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,18 @@
             </div>
         </div>
     </header>
+
+    <section class="event">
+        <div class="container">
+            <div class="event__details">
+                <h2 class="event__details__title">Nascimento</h2>
+                <p class="event__details_description">
+                    A Maria Eduarda nasceu no dia 24 de fevereiro de 2022, no hospital Santa Maria na Av. Paulista. Com 2.750g e 47 cm. Trouxe muitos ensinamentos e alagreia para nossas vidas. 
+                </p>
+            </div>
+            <img class="event__image" src="./images/madu_rescem.jpeg" alt="Madu nenem">
+        </div>
+    </section>
     <script src="scripts/main.js"></script>
 </body>
 </html>
